--- a/Clase 6/Ej1/Ej1.cbp
+++ b/Clase 6/Ej1/Ej1.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Ejercicios" />
+		<Option title="Ej1" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Ejercicios" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Ej1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Ejercicios" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Ej1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,14 +31,6 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="../Bibliotecas/Funciones/Funciones.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../Bibliotecas/Funciones/utn.h" />
-		<Unit filename="../Bibliotecas/Input/input.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../Bibliotecas/Input/input.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
