--- a/Bibliotecas/Validaciones/Validaciones.cbp
+++ b/Bibliotecas/Validaciones/Validaciones.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="ABM con Relaciones" />
+		<Option title="Validaciones" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/ABM con Relaciones" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Validaciones" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/ABM con Relaciones" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Validaciones" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,16 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="../../Bibliotecas/Input/input.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../Bibliotecas/Input/input.h" />
-		<Unit filename="../../Bibliotecas/biblioStr/validacionStr.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../Bibliotecas/biblioStr/validacionStr.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="validaciones.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="validaciones.h">
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Extensions>
 			<code_completion />
