--- a/Parciales Resueltos/PrimerParcial1/PrimerParcial1.cbp
+++ b/Parciales Resueltos/PrimerParcial1/PrimerParcial1.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="ABM con Relaciones" />
+		<Option title="PrimerParcial1" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/ABM con Relaciones" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/PrimerParcial1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/ABM con Relaciones" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/PrimerParcial1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,14 +31,20 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="../../Bibliotecas/Input/input.c">
+		<Unit filename="../../Laboratorio_1/Bibliotecas/Input/input.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../Bibliotecas/Input/input.h" />
-		<Unit filename="../../Bibliotecas/biblioStr/validacionStr.c">
+		<Unit filename="../../Laboratorio_1/Bibliotecas/Input/input.h" />
+		<Unit filename="../../Laboratorio_1/Bibliotecas/biblioStr/validacionStr.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../Bibliotecas/biblioStr/validacionStr.h" />
+		<Unit filename="../../Laboratorio_1/Bibliotecas/biblioStr/validacionStr.h" />
+		<Unit filename="funcParcial.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="funcParcial.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
