--- a/Morales.Federico/Morales.Federico.cbp
+++ b/Morales.Federico/Morales.Federico.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Morales.Federico" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Morales" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Morales.Federico" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Morales" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="bibStrValidacion.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="bibStrValidacion.h" />
 		<Unit filename="funcionesExamen.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -40,17 +44,9 @@
 		<Unit filename="input.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="input.h">
-			<Option target="&lt;{~None~}&gt;" />
-		</Unit>
+		<Unit filename="input.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="strFunc.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="strFunc.h">
-			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Extensions>
 			<code_completion />
