--- a/Morales_Federico/Morales_Federico.cbp
+++ b/Morales_Federico/Morales_Federico.cbp
@@ -31,9 +31,29 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="ArrayList.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="ArrayList.h" />
+		<Unit filename="bibStrValidacion.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="bibStrValidacion.h" />
+		<Unit filename="funciones.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="funciones.h" />
+		<Unit filename="input.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="input.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="validacionStr.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="validacionStr.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
