Se separan librerías de persona, fecha. Se cambia el nombre al struct de cliente, pasa a persona. En proceso.

--- a/Final/FINAL MORALES FEDERICO/Morales_Federico.cbp
+++ b/Final/FINAL MORALES FEDERICO/Morales_Federico.cbp
@@ -43,6 +43,13 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="funciones.h" />
+		<Unit filename="funcionesCSV.c">
+			<Option compilerVar="CC" />
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="funcionesCSV.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="input.c">
 			<Option compilerVar="CC" />
 		</Unit>
